Bug 442604 - "undefined" repos when I open Discover and go to Settings page for the first time
Summary: "undefined" repos when I open Discover and go to Settings page for the first ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.22.90
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-17 15:31 UTC by Patrick Silva
Modified: 2021-09-23 01:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screeen recording (1.44 MB, video/webm)
2021-09-17 15:33 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-09-17 15:31:25 UTC
SUMMARY
This bug occurs on both neon unstable and Arch Linux (Plasma 5.23 beta).
Some repos are listed as "undefined" when I open Discover and go to Settings page for the first time. Please watch the attached screen recording.


EXPECTED RESULT
correct names of th repos

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Patrick Silva 2021-09-17 15:33:47 UTC
Created attachment 141652 [details]
screeen recording
Comment 2 Nate Graham 2021-09-21 19:43:23 UTC
Can confirm on Fedora 34.
Comment 3 Aleix Pol 2021-09-23 01:31:36 UTC
Git commit 57d8dcd4928746e01d21c0c53aad605e43c893f2 by Aleix Pol.
Committed on 23/09/2021 at 01:31.
Pushed by apol into branch 'master'.

Sources: Fix displaying sources

This is a work-around to 2 half-bugs:
- ListView doesn't really care for models with columns
- QConcatenateTablesProxyModel enforces that we see the minimum amount
of columns available in all of the models.

Empty models (like QStandardItemModel) will report 0 columns if they're
empty. This makes the resulting model to appear bogus to the view.
ListView doesn't seem to refresh the items when a new column is added
because it doesn't care about columns.

Result: this workaround after a bunch of wasted hours. :(

M  +13   -2    libdiscover/resources/SourcesModel.cpp
M  +4    -0    libdiscover/utils.h

https://invent.kde.org/plasma/discover/commit/57d8dcd4928746e01d21c0c53aad605e43c893f2
Comment 4 Aleix Pol 2021-09-23 01:31:52 UTC
Git commit 793dc9e1908da487cfa42581a1c51af38933cf98 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 23/09/2021 at 01:31.
Pushed by apol into branch 'Plasma/5.23'.

Sources: Fix displaying sources

This is a work-around to 2 half-bugs:
- ListView doesn't really care for models with columns
- QConcatenateTablesProxyModel enforces that we see the minimum amount
of columns available in all of the models.

Empty models (like QStandardItemModel) will report 0 columns if they're
empty. This makes the resulting model to appear bogus to the view.
ListView doesn't seem to refresh the items when a new column is added
because it doesn't care about columns.

Result: this workaround after a bunch of wasted hours. :(


(cherry picked from commit 57d8dcd4928746e01d21c0c53aad605e43c893f2)

M  +13   -2    libdiscover/resources/SourcesModel.cpp
M  +4    -0    libdiscover/utils.h

https://invent.kde.org/plasma/discover/commit/793dc9e1908da487cfa42581a1c51af38933cf98